--- a/Source/Medianizer/app/src/main/res/values/strings.xml
+++ b/Source/Medianizer/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
         <item>Drama</item>
         <item>Crime</item>
     </string-array>
+
+    <string name="Search_IMDB">Search IMDB.com</string>
+    <string name="side">|</string>
+    <string name="down">_</string>
+    <string name="finish">Finish</string>
 </resources>
