--- a/Source/Medianizer/app/src/main/res/values/strings.xml
+++ b/Source/Medianizer/app/src/main/res/values/strings.xml
@@ -1,15 +1,6 @@
 <resources>
     <string name="app_name">Medianizer</string>
-    <string-array name="Gname_arrays">
-        <item>Action</item>
-        <item>Adventure</item>
-        <item>Sci-Fi</item>
-        <item>Thriller</item>
-        <item>Drama</item>
-        <item>Crime</item>
-    </string-array>
-
-    <string name="Search_IMDB">Search IMDB.com</string>
+    <string name="Search_IMDB">Search</string>
     <string name="side">|</string>
     <string name="down">_</string>
     <string name="finish">Finish</string>
